# quicklabel

./: Cargo.toml  README.md
quicklabel/: Cargo.toml
quicklabel/src/: main.rs
quicklabel/src/views/: labeling.rs  options.rs  setup.rs
src/: main.rs
src/views/: labeling.rs  mod.rs
