[package]
name = "quicklabel"
version = "1.0.0"
edition = "2024"
description = "A fast image labeling tool for creating text-to-image finetuning datasets"
authors = ["sysrqmagician <sysrqmagician@proton.me>"]
license = "GPL-3.0-only"
repository = "https://github.com/sysrqmagician/quicklabel"
keywords = ["image", "labeling", "dataset", "machine-learning", "dreambooth"]
categories = ["gui", "multimedia"]
readme = "README.md"

[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio"] }
rfd = "0.15.3"
tokio = { version = "1.44.2", features = ["full"] }
